...
  }

  return (
    <Screen padded={false}>
      <View style={styles.searchBar}>
        <Searchbar
          placeholder="Search people"
          value={query}
          onChangeText={setQuery}
          accessibilityLabel="Search people"
        />
      </View>

...
